# hoogle-mcp

./: .editorconfig  .envrc  .ghcid  .gitignore  CLAUDE.md  README.md  flake.nix  hie.yaml  hoogle-mcp.cabal  tdd
app/: Main.hs
src/: Hoogle.hs  MyLib.hs  ServerConfig.hs
test/: Discover.hs  HoogleToolTest.hs  Spec.hs  ToolDescriptionTest.hs  main.hs
